[develop]
script-dir=$base/lib/gimbal_description
[install]
install-scripts=$base/lib/gimbal_description

[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =

[options.data_files]
# Register package with ament index
share/ament_index/resource_index/packages =
    gimbal_description

# Install package.xml
share/gimbal_description =
    package.xml

# Install URDF/Xacro files
share/gimbal_description/urdf =
    urdf/gimbal.urdf.xacro

# Install launch files
share/gimbal_description/launch =
    launch/display.launch.py
